[package]
name = "rust_web_ui"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[[bin]]
path = "main.rs"
name = "main"

[dependencies]
futures-util = "0.3.30"
hex = "0.4.3"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
rutils = { git = "ssh://git@github.com/Vehmloewff/rutils", rev = "0.1.0" }
error-stack = "0.4.1"
